# hotel_rating

./: .gitignore  README.md  leaveltravel.py  ostrovok.py  pyproject.toml  test.py  travelata.py  yatravel.py
get_rating/: csv_utils.py  get_rating_utils.py  headers_and_proxies.py  rating_collector.py  rating_utils.py  utils.py
get_rating/docs/: SERP.csv  SERP.xlsx  hotels_rating.csv  hotels_rating.xlsx  hotels_rating111.csv  leaveltravel_rating.csv  ostrovok_rating.csv  proxy.txt
get_rating/docs/final_file/: ostrovok_rating.xlsx
get_rating/docs/read_file/: leaveltravel.xlsx  ostrovok.xlsx  travelata.xlsx
get_rating/docs/start_file/: ostrovok.xlsx  yatravel.xlsx
get_rating/scripts/: hotel_rating.py
