[tool.poetry]
name = "hotel-rating"
version = "0.1.0"
description = ""
authors = ["pavelkoA <pavelko88@mail.ru>"]
readme = "README.md"
package = [
    { include = "get_rating" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
