[tool.poetry]
name = "hotel-rating"
version = "0.1.0"
description = ""
authors = ["pavelkoA <pavelko88@mail.ru>"]
readme = "README.md"
packages = [
    { include = "get_rating" }
]


[tool.poetry.scripts]
rating-collector = "get_rating.scripts.hotel_rating:main"
rating-test = "test:main"


[tool.poetry.dependencies]
python = "^3.10"
requests = {extras = ["socks"], version = "^2.31.0"}
bs4 = "^0.0.1"
lxml = "^4.9.3"
fake-useragent = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
